overrides: pin to kernel-6.8.0-63.fc41
The 6.9 kernel is causing several podman tests to fail. We'll
investigate in https://github.com/coreos/fedora-coreos-tracker/issues/1693

--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -8,4 +8,24 @@
 # in the `metadata.reason` key, though it's acceptable to omit a `reason`
 # for FCOS-specific packages (ignition, afterburn, etc.).
 
-packages: {}
+packages:
+  kernel:
+    evr: 6.8.0-63.fc41
+    metadata:
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1693
+      type: pin
+  kernel-core:
+    evr: 6.8.0-63.fc41
+    metadata:
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1693
+      type: pin
+  kernel-modules:
+    evr: 6.8.0-63.fc41
+    metadata:
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1693
+      type: pin
+  kernel-modules-core:
+    evr: 6.8.0-63.fc41
+    metadata:
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1693
+      type: pin
