[next-devel] overrides: fast-track downgraded packages
F40 is now in final freeze. This means some packages in F39 will sort
as newer than packages in F39. We'll prevent downgrades by fast-tracking
any packages that would violoate this "no downgrade" rule.

Ref: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582

--- a/manifest-lock.overrides.aarch64.yaml
+++ b/manifest-lock.overrides.aarch64.yaml
@@ -14,3 +14,9 @@ packages:
     metadata:
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1694
       type: pin
+  crun-wasm:
+    evra: 1.14.4-1.fc40.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-1aeb8ef84c
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
+      type: fast-track
