--- a/manifest-lock.overrides.x86_64.yaml
+++ b/manifest-lock.overrides.x86_64.yaml
@@ -11,10 +11,10 @@
 
 packages:
   shim-x64:
-    evr: 15.6-2
+    evra: 15.8-3.x86_64
     metadata:
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1694
-      type: pin
+      type: fast-track
   amd-ucode-firmware:
     evra: 20240312-1.fc40.noarch
     metadata:
