--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -134,6 +134,12 @@ packages:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-3d80a949c6
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
       type: fast-track
+  libtirpc:
+    evr: 1.3.4-1.rc3.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-32d78ca745
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
+      type: fast-track
   libusb1:
     evr: 1.0.27-1.fc40
     metadata:
@@ -186,6 +192,12 @@ packages:
     evra: 20240312-1.fc40.noarch
     metadata:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-e62bcaf172
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
+      type: fast-track
+  rpcbind:
+    evr: 1.2.6-4.rc3.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-d7ac14a9b7
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
       type: fast-track
   rpm-ostree:
