--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -8,26 +8,4 @@
 # in the `metadata.reason` key, though it's acceptable to omit a `reason`
 # for FCOS-specific packages (ignition, afterburn, etc.).
 
-packages:
-  authselect:
-    evr: 1.5.0-3.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1680
-      type: pin
-  authselect-libs:
-    evr: 1.5.0-3.fc40
-    metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1680
-      type: pin
-  coreos-installer:
-    evr: 0.21.0-1.fc40
-    metadata:
-      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-a610b3508f
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1671
-      type: fast-track
-  coreos-installer-bootinfra:
-    evr: 0.21.0-1.fc40
-    metadata:
-      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-a610b3508f
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1671
-      type: fast-track
+packages: {}
