denylist: only warn if `coreos.boot-mirror` tests fail on ppc64le
These tests have been flaky on ppc64le for a while. Let's just mark them
as warn-only until we can actually look more into what's going on there.

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -20,3 +20,6 @@
     - branched
     - next
     - next-devel
+- pattern: coreos.boot-mirror*
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1659
+  warn: true
