--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -23,6 +23,8 @@
 - pattern: coreos.boot-mirror*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1659
   warn: true
+  arches:
+    - ppc64le
 - pattern: ext.config.kdump.crash
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1698
   snooze: 2024-04-07
