Manifests: move zram to system-configuration
Kubernetes 1.28 now supports swap on zram as beta
Moving the zram-generator package to a manifest shared with rhcos.

See https://github.com/coreos/fedora-coreos-docs/issues/530

--- a/manifests/system-configuration.yaml
+++ b/manifests/system-configuration.yaml
@@ -43,6 +43,9 @@ packages:
   - ssh-key-dir
   # Allow for configuring different timezones
   - tzdata
+  # zram-generator (but not zram-generator-defaults) for F33 change
+  # https://github.com/coreos/fedora-coreos-tracker/issues/509
+  - zram-generator
 
 postprocess:
   # Mask systemd-repart. Ignition is responsible for partition setup on first
