--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -22,7 +22,7 @@
     - next-devel
 - pattern: coreos.boot-mirror*
   tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1659
-  # warn: true (disabled on promotion)
+  warn: true
   arches:
     - ppc64le
 - pattern: ext.config.kdump.crash
