Add missing wifi firmware checks
Some wifi-firmwares will be split into sub-packages in fedora 40
We will keep them in until fedora 41, but display a warning message
in the console if NetworkManager-wifi is layered without the most
popular the wifi firmwares.

See https://github.com/coreos/fedora-coreos-tracker/issues/1575

Also link to FAQ entry.
see https://github.com/coreos/fedora-coreos-docs/pull/629

--- a/overlay.d/15fcos/usr/lib/systemd/system/coreos-check-ssh-keys.service
+++ b/overlay.d/15fcos/usr/lib/systemd/system/coreos-check-ssh-keys.service
@@ -16,6 +16,7 @@ ConditionKernelCommandLine=ignition.firstboot
 Before=systemd-user-sessions.service
 
 [Service]
+Before=systemd-user-sessions.service
 Type=oneshot
 ProtectHome=read-only
 ExecStart=/usr/libexec/coreos-check-ssh-keys
