--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -34,7 +34,7 @@ conditional-include:
     # Checks for breaking changes that came with Podman v5.
     include: podman-v5.yaml
   - if: releasever >= 41
-    # Include makedumpfile and kexec-utils subpackages from kexec-tools (new in F41+)
+    # Include makedumpfile and kdump-utils subpackages from kexec-tools (new in F41+)
     include: kdump.yaml
   # On <41, we want to keep making sure dnf doesn't slip in somehow
   # On 41+, we do want it
