[next-devel] overrides: fast-track glibc-2.39-8.fc40
Fast tracking glibc-2.39-8.fc40 as it carries an important security
issue fix.

Ref: https://github.com/coreos/fedora-coreos-tracker/issues/1711

--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -45,6 +45,30 @@ packages:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-a960990153
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1674#issuecomment-2010200582
       type: fast-track
+  glibc:
+    evr: 2.39-8.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-eafbf519ec
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1711
+      type: fast-track
+  glibc-common:
+    evr: 2.39-8.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-eafbf519ec
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1711
+      type: fast-track
+  glibc-gconv-extra:
+    evr: 2.39-8.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-eafbf519ec
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1711
+      type: fast-track
+  glibc-minimal-langpack:
+    evr: 2.39-8.fc40
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-eafbf519ec
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1711
+      type: fast-track
   gnutls:
     evr: 3.8.4-1.fc40
     metadata:
