manifests: Don't include Wi-Fi firmwares starting with Fedora 41
Move Wi-Fi firmwares to their own manifest so that we can automatically
drop then when we rebase to Fedora 41.

We can safely do that now that we have included a warning for existing
users.

See: https://github.com/coreos/fedora-coreos-config/pull/2978
Fixes: https://github.com/coreos/fedora-coreos-tracker/issues/1575

--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -43,6 +43,9 @@ conditional-include:
     include: exclude-dnf.yaml
   - if: releasever >= 41
     include: include-dnf.yaml
+  # Wifi firmwares will be dropped in F41
+  - if: releasever < 41
+    include: wifi-firmwares.yaml
 
 ostree-layers:
   - overlay/15fcos
