manifests: Move NetworkManager-team/teamd to EL9 shared manifest
libteam support is removed in CentOS Stream 10. Move packages related to
this support to a Enterprise Linux 9 only manifest to prepare for that
removal.

See: https://github.com/coreos/fedora-coreos-tracker/issues/1727

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -12,6 +12,7 @@ include:
   - shared-workarounds.yaml
   # See https://github.com/coreos/bootupd
   - bootupd.yaml
+  - shared-el9.yaml
 ostree-layers:
   - overlay/05core
   - overlay/08nouveau
