overlay.d/05core: tweak descriptions of unique boot units
- Add "CoreOS" to the beginning of coreos-unique-boot.service
- Add "Ignition" to the coreos-ignition-unique-boot.service
    - This is an attempt to distinguish it from the other
- Change `boot` to Boot since that difference wasn't significant

--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-ignition-unique-boot.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-ignition-unique-boot.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=CoreOS Ensure Unique Boot Filesystem
+Description=CoreOS Ignition Ensure Unique Boot Filesystem
 ConditionPathExists=/etc/initrd-release
 OnFailure=emergency.target
 OnFailureJobMode=isolate
