--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-unique-boot.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-unique-boot.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Ensure Unique `boot` Filesystem Label
+Description=CoreOS Ensure Unique Boot Filesystem Label
 ConditionPathExists=/etc/initrd-release
 DefaultDependencies=no
 Before=ignition-diskful.target
