--- a/manifests/shared-el9.yaml
+++ b/manifests/shared-el9.yaml
@@ -3,3 +3,5 @@ packages:
   # Teaming https://github.com/coreos/fedora-coreos-config/pull/289
   # and http://bugzilla.redhat.com/1758162
   - NetworkManager-team teamd
+  # runc is not in C10S
+  - runc
