manifests: includes kdump subpackages in f40
Kdump split out into subpackages in rawhide a while back [1]
But this split was just pushed to F40 as well with [2].

So we can remove the conditionnal includes and now always
include the subpackages.

[1] coreos@437dc2a
[2] https://bodhi.fedoraproject.org/updates/FEDORA-2024-d70dfd026e

--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -1050,6 +1050,12 @@
         "sourcerpm": "kbd"
       }
     },
+    "kdump-utils": {
+      "evra": "1.0.42-10.fc40.aarch64",
+      "metadata": {
+        "sourcerpm": "kdump-utils"
+      }
+    },
     "kernel": {
       "evra": "6.8.11-300.fc40.aarch64",
       "metadata": {
@@ -1075,7 +1081,7 @@
       }
     },
     "kexec-tools": {
-      "evra": "2.0.28-4.fc40.aarch64",
+      "evra": "2.0.28-10.fc40.aarch64",
       "metadata": {
         "sourcerpm": "kexec-tools"
       }
@@ -1786,6 +1792,12 @@
       "evra": "2.10-12.fc40.aarch64",
       "metadata": {
         "sourcerpm": "lzo"
+      }
+    },
+    "makedumpfile": {
+      "evra": "1.7.5-11.fc40.aarch64",
+      "metadata": {
+        "sourcerpm": "makedumpfile"
       }
     },
     "mdadm": {
