--- a/manifest-lock.ppc64le.json
+++ b/manifest-lock.ppc64le.json
@@ -1026,6 +1026,12 @@
         "sourcerpm": "kbd"
       }
     },
+    "kdump-utils": {
+      "evra": "1.0.42-10.fc40.ppc64le",
+      "metadata": {
+        "sourcerpm": "kdump-utils"
+      }
+    },
     "kernel": {
       "evra": "6.8.11-300.fc40.ppc64le",
       "metadata": {
@@ -1051,7 +1057,7 @@
       }
     },
     "kexec-tools": {
-      "evra": "2.0.28-4.fc40.ppc64le",
+      "evra": "2.0.28-10.fc40.ppc64le",
       "metadata": {
         "sourcerpm": "kexec-tools"
       }
@@ -1762,6 +1768,12 @@
       "evra": "2.10-12.fc40.ppc64le",
       "metadata": {
         "sourcerpm": "lzo"
+      }
+    },
+    "makedumpfile": {
+      "evra": "1.7.5-11.fc40.ppc64le",
+      "metadata": {
+        "sourcerpm": "makedumpfile"
       }
     },
     "mdadm": {
