--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -1068,6 +1068,12 @@
         "sourcerpm": "kbd"
       }
     },
+    "kdump-utils": {
+      "evra": "1.0.42-10.fc40.x86_64",
+      "metadata": {
+        "sourcerpm": "kdump-utils"
+      }
+    },
     "kernel": {
       "evra": "6.8.11-300.fc40.x86_64",
       "metadata": {
@@ -1093,7 +1099,7 @@
       }
     },
     "kexec-tools": {
-      "evra": "2.0.28-4.fc40.x86_64",
+      "evra": "2.0.28-10.fc40.x86_64",
       "metadata": {
         "sourcerpm": "kexec-tools"
       }
@@ -1804,6 +1810,12 @@
       "evra": "2.10-12.fc40.x86_64",
       "metadata": {
         "sourcerpm": "lzo"
+      }
+    },
+    "makedumpfile": {
+      "evra": "1.7.5-11.fc40.x86_64",
+      "metadata": {
+        "sourcerpm": "makedumpfile"
       }
     },
     "mdadm": {
