--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -159,6 +159,12 @@ packages:
   - amd-gpu-firmware intel-gpu-firmware nvidia-gpu-firmware
   # NIC firmware we've traditionally shipped but then were split out of linux-firmware in Fedora
   - qed-firmware # https://github.com/coreos/fedora-coreos-tracker/issues/1746
+  # makedumpfile and kexec were split into subpackages in kexec-tools 0.2.28-7
+  # which is not in RHCOS yet
+  # These should be with kexec-tools in the user-experience manifest, move them
+  # once the split lands in RHCOS.
+  - makedumpfile
+  - kdump-utils
 
 
 # - irqbalance
