denylist: add kdump.crash for rawhide
We are trying to enable composeFS in rawhide and there is an issue
where kdump fails to generate the initrd from boot.
Manually trigerring the rebuild works but requires the extra manual
step.
Snoozing this test to let some time for the kdump team to
investigate.

Note that the kdump over SSH test works so we still have some
coverage for kdump.

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -51,3 +51,10 @@
   streams:
     - rawhide
     - branched
+- pattern: ext.config.kdump.crash
+  tracker: https://bugzilla.redhat.com/show_bug.cgi?id=2284097
+  snooze: 2024-09-01
+  warn: true
+  streams:
+    - rawhide
+    - branched
