denylist: deny `ext.config.boot.bootupd-validate` until we rollout F41
See https://github.com/coreos/fedora-coreos-tracker/issues/1788

--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -10,3 +10,10 @@
   warn: true
   arches:
     - ppc64le
+- pattern: ext.config.boot.bootupd-validate
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1788
+  snooze: 2024-11-18
+  streams:
+    - stable
+    - testing
+    - testing-devel
